:bug: artdetail not showing 100vh

--- a/src/style/artdetail.css
+++ b/src/style/artdetail.css
@@ -1,6 +1,6 @@
 .artdetail {
   background-image: url("../assets/Background.png");
-  height: 100vh;
+  height: 120vh;
   background-size: cover;
 }
 
